po: update po/es_ES/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-01 08:17+0000\n"
+"PO-Revision-Date: 2016-09-02 10:54+0000\n"
 "Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -45,11 +45,11 @@ msgstr "Título de la Instancia del Informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr "Informe Plantilla Identificador"
+msgstr "ID Plantilla de informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
-msgstr "Nombre del reporte"
+msgstr "Nombre del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Arguments"
@@ -65,47 +65,47 @@ msgstr "Permisos del reporte"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Assigned to Roles"
-msgstr "Roles al reporte"
+msgstr "Roles asignados al informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance is Active"
-msgstr "El reporte está activo"
+msgstr "El informe está activo"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr "Reporte Creado Por"
+msgstr "Informe Creado Por"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr "Reporte Propiedad de"
+msgstr "Informe Propiedad de"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance email Subject"
-msgstr "Título del email del reporte"
+msgstr "Asunto del email del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Email Report Instance To"
-msgstr "Destinatario del email del reporte"
+msgstr "Destinatario del email del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "cc Email Report Instance To"
-msgstr "contacto en copia en el email del reporte"
+msgstr "contacto en copia en el email del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Header"
-msgstr "Encabezado del reporte"
+msgstr "Encabezado del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr "Pie de página del reporte"
+msgstr "Pie de página del informe"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
-msgstr "Identificador de informe pormenorizado"
+msgstr "ID de informe en detalle"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Instance is Reserved"
-msgstr "El tipo de caso está reservado "
+msgstr "El caso está reservado"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Name"
@@ -456,7 +456,7 @@ msgstr "Relación B-A "
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Rel ID"
-msgstr "Rel ID"
+msgstr "Id Rel"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Relationship Dates Validity"
@@ -1503,7 +1503,7 @@ msgstr "Agrupar por columnas"
 
 #: CRM/Report/Form.php
 msgid "Sorting"
-msgstr "Clasificar"
+msgstr "Ordenar"
 
 #: CRM/Report/Form.php
 msgid "Order by Section"
@@ -1671,7 +1671,7 @@ msgstr "Sufijo del Contacto"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr "Saludo por Dirección"
+msgstr "Dirección de bienvenida"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
@@ -1691,7 +1691,7 @@ msgstr "acceder a CiviReport"
 
 #: CRM/Report/Info.php
 msgid "View reports"
-msgstr "Ver Todos los Informes"
+msgstr "Ver Informes"
 
 #: CRM/Report/Info.php
 msgid "access Report Criteria"
@@ -1699,7 +1699,7 @@ msgstr "Acceder a Informes de Criterio"
 
 #: CRM/Report/Info.php
 msgid "Change report search criteria"
-msgstr "Cambiar criterio de búsqueda"
+msgstr "Cambiar criterio de búsqueda de informe"
 
 #: CRM/Report/Info.php
 msgid "administer reserved reports"
@@ -1912,7 +1912,7 @@ msgid ""
 "Subject of the email containing the report, as well as the recipient list "
 "(To and Cc fields). Separate multiple 'To' or 'CC' email addresses with "
 "commas."
-msgstr "Una copia de este reporte puede ser automáticamente generada y enviada vía email a sus destinatarios seleccionados. Utilice la configuración de esta sección para controlar el Asunto del email conteniendo el reporte, así como la lista de destinatarios ( campos Para y CC). Separe múltiples 'Para' o 'CC' con comas. "
+msgstr "Una copia de este informe puede ser automáticamente generada y enviada vía email a sus destinatarios seleccionados. Utilice la configuración de esta sección para controlar el Asunto del email conteniendo el informe, así como la lista de destinatarios ( campos Para y CC). Separe múltiples 'Para' o 'CC' con comas. "
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -1983,7 +1983,7 @@ msgstr "Si usted requiere que un dashlet NO esté disponible Y debe eliminarlo d
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Limit Rows per Page in Dashboard"
-msgstr "Limitar líneas en panel de control"
+msgstr "Limitar líneas por página en panel de control"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -2002,7 +2002,7 @@ msgid ""
 " instances whose criteria affect the data available on non-report screens. "
 "For example, the display columns configured for the  Contact Logging Summary"
 " affect the columns shown under each contact's Change Log tab."
-msgstr "Usuarios con permiso de \"administrar reportes reservados\" pueden marcar una instancia del reporte como reservada, lo que previene a otros usuarios de acceder o modificar los Criterios de Reporte o Configuraciones de Reporte.\nEsto es particularmente útil para instancias de reporte cuyos criterios afectan  la información disponible en pantallas de no reportes. Por ejemplo, las columnas de visualización configuradas para el\nResumen de Registro de Contacto afectan a las columnas mostradas en la pestaña de cada contacto para Cambiar Registro."
+msgstr "Usuarios con permiso de \"administrar informes reservados\" pueden marcar una instancia del informe como reservada, lo que previene a otros usuarios de acceder o modificar los Criterios de Informe o Configuraciones de Informe.\nEsto es particularmente útil para instancias de informe cuyos criterios afectan  la información disponible en pantallas de no informes. Por ejemplo, las columnas de visualización configuradas para el\nResumen de Registro de Contacto afectan a las columnas mostradas en la pestaña de cada contacto para Cambiar Registro."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "View All Reports"
@@ -2125,153 +2125,153 @@ msgstr "Duración total (En minutos)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
-msgstr "Listar todas las actividades para esta fila."
+msgstr "Listar toda la actividad(es) para esta fila."
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Extra information to control grouping"
-msgstr ""
+msgstr "Información extra para control grupal"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Contact Merge"
-msgstr ""
+msgstr "Unificar contacto"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
-msgstr ""
+msgstr "Red"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
-msgstr ""
+msgstr "Correo electrónico en espera"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
-msgstr ""
+msgstr "Total del año pasado"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime Total"
-msgstr ""
+msgstr "Total "
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime total"
-msgstr ""
+msgstr "total"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total amount last year"
-msgstr ""
+msgstr "Cantidad total del último año"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for "
-msgstr ""
+msgstr "Total para"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for Fiscal Year "
-msgstr ""
+msgstr "Total para año fiscal"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total LifeTime"
-msgstr ""
+msgstr "Total"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last Contribution Processed"
-msgstr ""
+msgstr "Ultima contribución procesada"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
-msgstr ""
+msgstr "ID de participante registrado"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
-msgstr ""
+msgstr "Tasa de participante"
 
 #: CRM/Report/Form/Instance.php
 msgid "Configure link to..."
-msgstr ""
+msgstr "Configurar un enlace a..."
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Ver resultados"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
-msgstr ""
+msgstr "Ver criterio"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr ""
+msgstr "Porcentaje de rebote"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
-msgstr ""
+msgstr "En espera"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold date"
-msgstr ""
+msgstr "Fecha de retención"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold reset date"
-msgstr ""
+msgstr "Fecha de desbloqueo de espera"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Opt-outs"
-msgstr ""
+msgstr "Exclusiones"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Total Open Rate"
-msgstr ""
+msgstr "Ratio total de apertura"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
-msgstr ""
+msgstr "Ratio único de apertura"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
-msgstr ""
+msgstr "Ver detalles de correo para este correo"
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "desarrollador"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
-msgstr ""
+msgstr "Gran Total"
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
-msgstr ""
+msgstr "Actualizar resultados"
 
 #: CRM/Report/Form.php
 msgid "View results"
-msgstr ""
+msgstr "Ver resultados"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
-msgstr ""
+msgstr "ver reporte sql"
 
 #: CRM/Report/Info.php
 msgid "View sql used in CiviReports"
-msgstr ""
+msgstr "Ver sql usados en CiviReports"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "View as pdf"
-msgstr ""
+msgstr "Ver como PDF"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Imprimir informe"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Exportar a CSV"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Borrar informe"
 
 #: CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "¿Estas seguro que quiere borrar este informe? Esta acción no se puede deshacer."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
-msgstr ""
+msgstr "Enlazar a"
