po: update po/fr_CA/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -10,6 +10,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2011
 # samuelsov <samuel@koumbit.org>, 2011,2015
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-02 18:31+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,12 +50,12 @@ msgstr "Lancer un sondage"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Survey Types"
-msgstr "Types de sondages"
+msgstr "Types de sondage"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaign Types"
-msgstr "Types de campagnes"
+msgstr "Types de campagne"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -64,7 +65,7 @@ msgstr "Statuts des campagnes"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Engagement Index"
-msgstr "Index d'engagement"
+msgstr "Indice d'engagement"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2190,7 +2191,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Composants"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
