--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -6,15 +6,15 @@
 # Anders Nilsson <anders@webmaestro.se>, 2015
 # Isak Bergdahl <jahve@rocketmail.com>, 2013-2014
 # Julipan <stian@julipan.org>, 2011
-# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-22 12:40+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-09-02 18:43+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +80,7 @@ msgstr "Avinstallera"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Avinstallera \"%21\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
@@ -204,7 +204,7 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Vertical Spacing"
-msgstr ""
+msgstr "Vertikalt radavstånd"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
@@ -248,7 +248,7 @@ msgstr "Adresstypen '%1' har sparats."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Mailkonto"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
@@ -273,7 +273,7 @@ msgstr "En svarsadress måste ha ett giltigt epost-adressformat."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Server"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -392,11 +392,11 @@ msgstr "Klassnamn"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "Kontakter och fall"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
-msgstr ""
+msgstr "Enbart fall"
 
 #: CRM/Admin/Form/Options.php
 msgid "Default Option?"
@@ -565,7 +565,7 @@ msgstr "Marginalen måste vara numerisk"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Weight must be integer"
-msgstr ""
+msgstr "Vikten måste vara ett heltal"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Selected PDF Page Format has been deleted."
@@ -682,7 +682,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "For transmission"
-msgstr ""
+msgstr "För sändning"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
@@ -702,7 +702,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
-msgstr ""
+msgstr "Skattevillkor"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
@@ -1001,7 +1001,7 @@ msgstr "Registrera åtgärden som automatiskt skickat epost eller SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
-msgstr ""
+msgstr "Skicka om"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
@@ -1021,11 +1021,11 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
-msgstr ""
+msgstr "Från e-post"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Begränsa till"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1212,7 +1212,7 @@ msgstr "Standardalternativ för land"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default State/Province"
-msgstr ""
+msgstr "Standard stat/provins"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Currency"
@@ -1445,7 +1445,7 @@ msgstr "Avaktivera utgående e-post"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Redirect to Database"
-msgstr ""
+msgstr "Omdirigera till databas"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Select Mailer"
@@ -1494,7 +1494,7 @@ msgstr "Du har valt att \"Avaktivera utgående e-post\". Det går inte att skick
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Email Disabled"
-msgstr ""
+msgstr "E-post avaktiverat"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
@@ -1526,7 +1526,7 @@ msgstr "Dina %1 inställningar är felaktiga. Något testmeddelande har inte ski
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Not Sent"
-msgstr ""
+msgstr "Post skickades inte"
 
 #: CRM/Admin/Form/Setting/UF.php
 msgid "Settings - %1 Integration"
@@ -1606,7 +1606,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "You do not have sufficient permission to delete this reserved tag."
-msgstr ""
+msgstr "Du har inte behörigheten som krävs för att ta bort den här reserverade taggen."
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
@@ -1614,7 +1614,7 @@ msgstr "Markeringsbar?"
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
-msgstr ""
+msgstr "Taggen '%1' har tagits bort."
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been saved."
