--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
+# Flavio Grassi <flavio.g.grassi@gmail.com>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2015
 # Johan Soderkvist <johansoderkvist@ikreativo.it>, 2016
 # mitch.camp <kal-el@hotmail.it>, 2012
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-26 09:03+0000\n"
-"Last-Translator: Johan Soderkvist <johansoderkvist@ikreativo.it>\n"
+"PO-Revision-Date: 2016-09-04 15:44+0000\n"
+"Last-Translator: Flavio Grassi <flavio.g.grassi@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1369,7 +1370,7 @@ msgstr "Eventi per data"
 
 #: CRM/Event/Form/Task/Badge.php
 msgid "Make Name Badges"
-msgstr "Crea Nome dei Badge"
+msgstr "Crea badge nominativi"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid "Batch Update for Events"
@@ -1634,7 +1635,7 @@ msgstr "Cambia stato dei partecipanti"
 
 #: CRM/Event/Task.php
 msgid "Print Event Name Badges"
-msgstr "Stampa Nome dei Badge dell'Evento"
+msgstr "Stampa badge nominativi  per l'evento"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Choose Events For %1 (%2)"
@@ -2658,7 +2659,7 @@ msgstr "Inserire un messaggio che si vuole includere all'inizio dell'email di co
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Print Name Badge"
-msgstr "Stampa Badge del Nome"
+msgstr "Stampa badge nominativo"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Configure this event"
@@ -3800,7 +3801,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Badge nominativi - stampa"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
