po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 23:39+0000\n"
+"PO-Revision-Date: 2016-09-04 16:22+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -11010,7 +11010,7 @@ msgstr "Zichtbaarheid"
 
 #: CRM/Group/Form/Edit.php
 msgid "Make sure at least one parent group is set."
-msgstr "Selecteer minimaal een ouder groep."
+msgstr "Selecteer minimaal één bovenliggende groep."
 
 #: CRM/Group/Form/Edit.php
 msgid "Group Deleted"
@@ -17851,7 +17851,7 @@ msgstr "De oude \"Geavanceerd meerdere selecteren\" widget wordt uitgefaseerd en
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "Obsolete widget"
-msgstr "Verouderd widget"
+msgstr "Verouderde widget"
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "View / Edit Multiple Choice Options"
