--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-07-05 01:34+0000\n"
+"PO-Revision-Date: 2016-09-04 16:21+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1586,7 +1586,7 @@ msgstr "Prioriteit van deze activiteit"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Parent Activity ID"
-msgstr "Activiteit ID van \"ouder\""
+msgstr "Bovenliggende activiteit-ID"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the Parent Activity "
