--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 11:33+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-09-05 08:30+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2403,7 +2403,7 @@ msgstr "CiviCRM comprovarà cada registre d'usuari amb un registre de contacte. 
 #: templates/CRM/Admin/Form/ContactType.tpl
 #: templates/CRM/Admin/Page/ContactType.tpl
 msgid "(built-in)"
-msgstr "(incorporat)"
+msgstr "(integrat)"
 
 #: templates/CRM/Admin/Form/DomainDump.tpl
 msgid "Backup Database"
