po: update po/es_ES/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
+# Angel_Rolando <angelramost@gmail.com>, 2016
 # Antoinette Brinkmann <AC.BRINKMANN@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2015-2016
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 18:30+0000\n"
-"Last-Translator: Antoinette Brinkmann <AC.BRINKMANN@gmail.com>\n"
+"PO-Revision-Date: 2016-09-06 14:24+0000\n"
+"Last-Translator: Angel_Rolando <angelramost@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -305,7 +306,7 @@ msgstr "%1 Guardado"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Con contacto(s)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -397,11 +398,11 @@ msgstr "Fechas de actividades - inicio"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Actividades eliminadas"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Seleccionar contacto"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -614,7 +615,7 @@ msgstr "Recursos del caso"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
-msgstr ""
+msgstr "Instancias Máximas"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
@@ -622,23 +623,23 @@ msgstr "Añadir tipo de actividad"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
-msgstr ""
+msgstr "ADVERTENCIA: el nombre tipo caso incluye caracteres devalaudos"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid ""
 "WARNING: If any external files or programs reference the old \"Name\", then "
 "they must be updated manually."
-msgstr ""
+msgstr "ADVERTENCIA: si cualquier archivo o programa hace referencia al viejo \"Nombre\", entonces estos deben actualizarse manualmente."
 
 #: ang/crmCaseType/edit.html
 msgid ""
 "Use this screen to define or update the Case Roles, Activity Types, and "
 "Timelines for a case type."
-msgstr ""
+msgstr "Usa esta pantalla para definir o actualizar los Rokes de Caso, Tipos de Actividad y Lineas de tiempo para un tipo de caso"
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Saber más..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -646,36 +647,36 @@ msgstr "Roles"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Añadir..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Linea de tiempo"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Secuencia"
 
 #: ang/crmCaseType/list.html
 msgid ""
 "A Case Type describes a group of related tasks, interactions, or processes."
-msgstr ""
+msgstr "Un Tipo de Caso describe a un grupo de tareas, interacciones o procesos  relacionados"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Assign to Creator"
-msgstr ""
+msgstr "Asignar al creador"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Is Manager"
-msgstr ""
+msgstr "Es administrador"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Añadir rol"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referencia"
 
 #: ang/crmCaseType.js
 msgid ""
