--- a/po/en_GB/pledge.po
+++ b/po/en_GB/pledge.po
@@ -6,13 +6,14 @@
 # Andi Chandler <andi@gowling.com>, 2015-2016
 # Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2013
+# Howard Shand <howardshand@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-16 10:49+0000\n"
-"Last-Translator: Andi Chandler <andi@gowling.com>\n"
+"PO-Revision-Date: 2016-09-07 21:36+0000\n"
+"Last-Translator: Howard Shand <howardshand@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -693,13 +694,13 @@ msgstr "Acknowledgment Sent"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 msgid "dear %1"
-msgstr "dear %1"
+msgstr "Dear %1"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 msgid ""
 "thank you for your generous pledge. please print this acknowledgment for "
 "your records."
-msgstr "thank you for your generous pledge. please print this acknowledgment for your records."
+msgstr "Thank you for your generous pledge. Please print this acknowledgment for your records."
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
