--- a/po/pt_PT/common-base.po
+++ b/po/pt_PT/common-base.po
@@ -20,13 +20,14 @@
 # Ricardo <ricardo75@gmail.com>, 2011
 # Rita Silva <blaudag@gmail.com>, 2014
 # sbsbessa <sbsbessa@gmail.com>, 2013
+# Stelmo Barbosa <stelmo@sapo.pt>, 2016
 # Waldir Pimenta <waldyrious@gmail.com>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-07 12:55+0000\n"
+"Last-Translator: Stelmo Barbosa <stelmo@sapo.pt>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -146,7 +147,7 @@ msgstr "Todos"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr ""
+msgstr "ID da ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -154,7 +155,7 @@ msgstr "Nome ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Deny ACL?"
-msgstr ""
+msgstr "Negar ACL?"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
@@ -643,7 +644,7 @@ msgstr "Atividade criada por"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity assigned to"
-msgstr "Atividade atribuida por"
+msgstr "Atividade atribuida a"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity targeted to"
