--- a/po/pt_PT/admin.po
+++ b/po/pt_PT/admin.po
@@ -10,12 +10,13 @@
 # Paulo Pereira <pauloizidoro@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ricardo <ricardo75@gmail.com>, 2011
+# Stelmo Barbosa <stelmo@sapo.pt>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-07 12:50+0000\n"
+"Last-Translator: Stelmo Barbosa <stelmo@sapo.pt>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,11 +32,11 @@ msgstr "Tipo de Contacto Básico"
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr ""
+msgstr "Este nome de Tipo de Contato já existe na base de dados. Os nomes de tipos de contato devem ser únicos."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Os nome de Tipo de Contato não deveriam ser palavras reservadas."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -45,15 +46,15 @@ msgstr "O tipo de contacto selecionado foi eliminado."
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr ""
+msgstr "O Tipo de Contato selecionado não pode ser excluído . Certifique-se que o Tipo de Contato não tem quaisquer dados personalizados ou grupos associados."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
-msgstr ""
+msgstr "O Tipo de Contato '%1' foi guardado."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "Esta feature foi desabilitada pelo administrador."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
@@ -65,7 +66,7 @@ msgstr "Instalar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Instalar '%1'?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
