--- a/po/pt_PT/drupal-civicrm.po
+++ b/po/pt_PT/drupal-civicrm.po
@@ -7,13 +7,14 @@
 # Paulo Pereira <pauloizidoro@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Rita Silva <blaudag@gmail.com>, 2015
+# Stelmo Barbosa <stelmo@sapo.pt>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-04-28 11:16+0000\n"
-"Last-Translator: Rita Silva <blaudag@gmail.com>\n"
-"Language-Team: Portuguese (http://www.transifex.com/projects/p/civicrm/language/pt/)\n"
+"PO-Revision-Date: 2016-09-07 12:52+0000\n"
+"Last-Translator: Stelmo Barbosa <stelmo@sapo.pt>\n"
+"Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1661,7 +1662,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who is assigned the activity."
-msgstr ""
+msgstr "O Contato a quem é atribuida a atividade."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Assignee Contact ID"
