--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -9,6 +9,7 @@
 # Carlos Capote <carloscapote@masticable.org>, 2012,2014
 # carmyman <manuel.rubio.p@gmail.com>, 2012
 # Carolina Gomez <cgomez@ndi.org>, 2015
+# dario hereñu <magallania@gmail.com>, 2016
 # francescbassas <francesc@babu.cat>, 2014
 # francescbassas <francesc@babu.cat>, 2014
 # Gorehide Tresde <gorehide@gmail.com>, 2016
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 12:48+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"PO-Revision-Date: 2016-09-08 18:59+0000\n"
+"Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1179,43 +1180,43 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Guardar como"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Dirección de correo electrónico"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Desuscribirse del Grupo"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Sin contenido para previsualizar"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Previsualizar como HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Previsualizar como texto sin formato"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Enviar correo electrónico de prueba a:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Probar correo electrónico"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Enviar mensaje de prueba a %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Enviar prueba"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
@@ -1223,23 +1224,23 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Enviar mensaje de prueba al grupo"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Enviar a %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Un mensaje de texto será enviado a %1 personas:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
-msgstr ""
+msgstr "Ninguno de los contactos en este grupo posee una dirección de correo electrónico"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "Grupo está vacío"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
@@ -1252,7 +1253,7 @@ msgstr ""
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Monitorear respuestas"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
@@ -1400,7 +1401,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Save Draft"
-msgstr ""
+msgstr "Guardar Borrador"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
@@ -1413,7 +1414,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
-msgstr ""
+msgstr "(Estimando)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
@@ -1429,7 +1430,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
-msgstr ""
+msgstr "Previsualizando..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
@@ -1445,7 +1446,7 @@ msgstr ""
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
-msgstr ""
+msgstr "Conflicto"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid ""
@@ -1467,11 +1468,11 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
-msgstr ""
+msgstr "Vía internet"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Email"
-msgstr ""
+msgstr "Vía correo electrónico"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1485,7 +1486,7 @@ msgstr ""
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
-msgstr ""
+msgstr "Guardar plantilla"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
@@ -1517,11 +1518,11 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
-msgstr ""
+msgstr "Incluir grupo"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Group"
-msgstr ""
+msgstr "Excluir grupo"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
@@ -1547,7 +1548,7 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
-msgstr ""
+msgstr "Guardar como:"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
@@ -1559,7 +1560,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Enviando..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
@@ -1622,7 +1623,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
-msgstr ""
+msgstr "Enviar"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
