po: update po/es_ES/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-08 18:59+0000\n"
+"PO-Revision-Date: 2016-09-09 19:57+0000\n"
 "Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -377,7 +377,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Group Percentage"
-msgstr ""
+msgstr "Grupo porcentaje"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
@@ -525,7 +525,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Security Hash"
-msgstr ""
+msgstr "Hash de seguridad"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Group"
@@ -913,11 +913,11 @@ msgstr "Acceso a CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
-msgstr ""
+msgstr "acceder a las páginas de suscripción/desuscripción CivilMail"
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
-msgstr ""
+msgstr "Suscribirse/desuscribirse del grupo de listado de correo"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
@@ -930,19 +930,19 @@ msgstr "Eliminar envío "
 
 #: CRM/Mailing/Info.php
 msgid "view public CiviMail content"
-msgstr ""
+msgstr "ver contenido público CivilMail"
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr ""
+msgstr "crear envío de correos"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr ""
+msgstr "programar envío de correos"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr ""
+msgstr "aprobar envío de correos"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Cancel Mailing"
@@ -1220,7 +1220,7 @@ msgstr "Enviar prueba"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Enviar correo electrónico de prueba al grupo:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
@@ -1244,7 +1244,7 @@ msgstr "Grupo está vacío"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
-msgstr ""
+msgstr "Previsualizar un listado de destinatarios"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
@@ -1257,19 +1257,19 @@ msgstr "Monitorear respuestas"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Auto-responder a respuestas"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
-msgstr ""
+msgstr "Mensaje de auto-responder"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Incluye:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Excluye:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1279,7 +1279,7 @@ msgstr ""
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Texto sin formato"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
@@ -1296,7 +1296,7 @@ msgstr "Respondiendo"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Auto-responder"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
@@ -1310,27 +1310,27 @@ msgstr "Volver a Suscribirse"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Publication"
-msgstr ""
+msgstr "Publicación"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Enviar inmediatamente"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
-msgstr ""
+msgstr "Enviar en:"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Seleccionar campaña"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
-msgstr ""
+msgstr "Monitorear clics"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Opens"
-msgstr ""
+msgstr "Monitorear aperturas"
 
 #: ang/crmMailing/BodyHtml.html ang/crmMailing/BodyText.html
 msgid "Required tokens are missing."
@@ -1346,7 +1346,7 @@ msgstr ""
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Definir envío de correo"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1355,7 +1355,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Encabezado y pie de página"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1364,17 +1364,17 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Responses"
-msgstr ""
+msgstr "Respuestas"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
-msgstr ""
+msgstr "Revisar y programar horarios"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Review"
-msgstr ""
+msgstr "Revisar"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1383,7 +1383,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Delete Draft"
-msgstr ""
+msgstr "Eliminar borrador"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1392,7 +1392,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "¿Está seguro que desea permanentemente eliminar este envío de correo?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1410,7 +1410,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Enviando...."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
@@ -1418,15 +1418,15 @@ msgstr "(Estimando)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
-msgstr ""
+msgstr "Sin destinatarios"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~1 recipient"
-msgstr ""
+msgstr "~1 destinatario"
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~%1 recipients"
-msgstr ""
+msgstr "~%1 destinatarios"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
@@ -1434,7 +1434,7 @@ msgstr "Previsualizando..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
-msgstr ""
+msgstr "Previsualizar (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
@@ -1442,7 +1442,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Método de selección"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
@@ -1452,7 +1452,7 @@ msgstr "Conflicto"
 msgid ""
 "The \"%1\" option conflicts with the \"%2\" option. The \"%2\" option has "
 "been disabled."
-msgstr ""
+msgstr "La opción \"%1\" genera conflicto con la opción \"%2\". La opción \"%2\" ha sido deshabilitado."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1490,13 +1490,13 @@ msgstr "Guardar plantilla"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
-msgstr ""
+msgstr "ID de elemento no válido (%1)"
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid ""
 "Based on current data, approximately %1 contacts will receive a copy of the "
 "mailing."
-msgstr ""
+msgstr "Basado en los actuales datos, aproximadamente %1 de los contactos recibirán una copia del envío de correos. "
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid "Below is a sample of the first %1 recipients."
@@ -1536,7 +1536,7 @@ msgstr ""
 msgid ""
 "This mailing was generated based on search results. The search results "
 "cannot be removed."
-msgstr ""
+msgstr "Este envío de correos fue generado basado en los resultados de búsquedas. La misma no puede ser quitada."
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save the current mailing as a template."
@@ -1544,7 +1544,7 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
-msgstr ""
+msgstr "Actualizar \"%1\""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
@@ -1552,11 +1552,11 @@ msgstr "Guardar como:"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
-msgstr ""
+msgstr "Asunto: %1"
 
 #: ang/crmMailing/services.js
 msgid "Could not identify any recipients. Perhaps the group is empty?"
-msgstr ""
+msgstr "No se pudo identificar a ninguno de los destinatarios. ¿Tal vez el grupo está vacío?"
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
@@ -1576,19 +1576,19 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
-msgstr ""
+msgstr "Plantilla (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (B)"
-msgstr ""
+msgstr "Plantilla (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr ""
+msgstr "De (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr ""
+msgstr "De (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
@@ -1600,11 +1600,11 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
-msgstr ""
+msgstr "Asunto (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (B)"
-msgstr ""
+msgstr "Asunto (B)"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid ""
@@ -1615,11 +1615,11 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr ""
+msgstr "Tipo de prueba"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
-msgstr ""
+msgstr "Distribución"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
@@ -1647,7 +1647,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
-msgstr ""
+msgstr "Ajustes"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Target"
@@ -1659,11 +1659,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (A)"
-msgstr ""
+msgstr "Previsualizar (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (B)"
-msgstr ""
+msgstr "Previsualizar (B)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (A)"
@@ -1686,15 +1686,15 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Select as Final"
-msgstr ""
+msgstr "Seleccionar como Final"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Delivery"
-msgstr ""
+msgstr "Entrega"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not selected"
-msgstr ""
+msgstr "No seleccionado"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Started at"
@@ -1738,15 +1738,15 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
-msgstr ""
+msgstr "Prueba A (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test B (%1)"
-msgstr ""
+msgstr "Prueba B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
-msgstr ""
+msgstr "Final (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Select Final Mailing (Test %1)"
@@ -1754,11 +1754,11 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
-msgstr ""
+msgstr "- Estado -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr ""
+msgstr "- Tipo de prueba -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
@@ -1770,11 +1770,11 @@ msgstr "Nuevo A/B Test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr ""
+msgstr "Envío de correo A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr ""
+msgstr "Envío de correo B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
@@ -2534,23 +2534,23 @@ msgstr "Aperturas / clics"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
-msgstr ""
+msgstr "Campaña %1 %2"
 
 #: CRM/Mailing/DAO/BouncePattern.php
 msgid "Bounce Pattern ID"
-msgstr ""
+msgstr "ID patrón de rebotes"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type ID"
-msgstr ""
+msgstr "ID Tipo de rebote"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Name"
-msgstr ""
+msgstr "Nombre tipo de rebote"
 
 #: CRM/Mailing/DAO/BounceType.php
 msgid "Bounce Type Description"
-msgstr ""
+msgstr "Descripción de tipo de rebote"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Spool ID"
