po: update po/pl_PL/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/common-components.po
+++ b/po/pl_PL/common-components.po
@@ -5,6 +5,7 @@
 # Translators:
 # njakub <fiilozof@gmail.com>, 2014
 # kalor <karol.krzyczkowski@gmail.com>, 2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-10 01:33+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -216,7 +217,7 @@ msgstr "Pobierz"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Szablon wiadomości"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -257,12 +258,12 @@ msgstr "Konfiguracja"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "O CiviCRMie"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
 msgid "Advanced"
-msgstr ""
+msgstr "Zaawansowane"
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 #: templates/CRM/Admin/Form/OptionGroup.tpl
@@ -321,7 +322,7 @@ msgstr "Aktywne?"
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 #: ang/crmCaseType/activitySetDetails.html
 msgid "Workflow"
-msgstr ""
+msgstr "Workflow"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
@@ -330,7 +331,7 @@ msgstr "Nie można usunąć"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Rodzaje interakcji"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -356,7 +357,7 @@ msgstr "Klasa"
 
 #: CRM/Badge/Form/Layout.php CRM/Financial/DAO/PaymentToken.php
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 #: CRM/Badge/Form/Layout.php CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Save and Preview"
@@ -394,7 +395,7 @@ msgstr "Nazwa grupy do edytowania"
 
 #: CRM/Batch/DAO/Batch.php CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Batch Title"
-msgstr ""
+msgstr "Nazwa serii"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -487,7 +488,7 @@ msgstr "Tytuł raportu"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Wynik"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -540,7 +541,7 @@ msgstr "Jeśli wyszukujesz w zakresie dat lub kwot, wybierz szerszy zakres warto
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
@@ -619,7 +620,7 @@ msgstr "Tylko darowizny "
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
-msgstr ""
+msgstr "ID Rodzaju finansowania"
 
 #: CRM/Contribute/DAO/Contribution.php
 #: templates/CRM/Contribute/Form/Search/ContributionRecur.tpl
@@ -706,7 +707,7 @@ msgstr "Jednostka częstotliwości"
 
 #: CRM/Contribute/DAO/ContributionRecur.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Token ID"
-msgstr ""
+msgstr "ID tokenu płatności"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Report/Form/Contribute/Recur.php
@@ -795,7 +796,7 @@ msgstr "Podgląd Płatności"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Credit Card Information"
-msgstr ""
+msgstr "Informacje karty kredytowej"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
@@ -1078,7 +1079,7 @@ msgstr "Należne Saldo"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "ładowanie"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1231,7 +1232,7 @@ msgstr "Nr transakcji"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Membership Transaction #"
-msgstr ""
+msgstr "Transakcja członkostwa numer #"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
@@ -1980,7 +1981,7 @@ msgstr "Wybierz odpowiedni rodzaj płatności właściwy dla tej transakcji."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Szablon"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2000,7 +2001,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 msgid "SubTotal"
-msgstr ""
+msgstr "Podsuma"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
@@ -2121,12 +2122,12 @@ msgstr "Stan zadania wysyłkowego"
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 #: ang/crmMailingAB/EditCtrl/report.html CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Rezygnacja"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Akceptacja"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Clicks.php
 #: CRM/Report/Form/Mailing/Summary.php
@@ -2253,19 +2254,19 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "opłaty"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-wybierz-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "ID wysyłki"
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Rozpoczęte"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
