po: update po/pl_PL/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -26,7 +26,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-15 22:18+0000\n"
+"PO-Revision-Date: 2016-09-09 23:39+0000\n"
 "Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -2230,4 +2230,4 @@ msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista obietnic w tym kwota zadeklarowana, statusu obietnicy, następnym terminie płatności, saldo należne, łączną kwotę  zapłaconą itp."
