--- a/po/pl_PL/pledge.po
+++ b/po/pl_PL/pledge.po
@@ -6,6 +6,7 @@
 # Adam Stachowicz <saibamenppl@gmail.com>, 2015
 # Dariusz Koryto <nowydako@gmail.com>, 2012
 # Gimbus <maciek.dabrowski@wspolpracownia.pl>, 2013
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # mrt, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-10 00:46+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -112,7 +113,7 @@ msgstr "Częstotliwość wpłat"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Contribution Page"
-msgstr ""
+msgstr "Strona deklaracji płatności"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Original Installment Amount"
@@ -128,11 +129,11 @@ msgstr "Jednostka Częstotliwości Deklaracji"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge day"
-msgstr ""
+msgstr "Dzień deklarowania"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Number of Installments"
-msgstr ""
+msgstr "Deklarowana ilość rat"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Acknowledged"
@@ -297,7 +298,7 @@ msgstr "Nazwisko lub e-mail osoby deklarującej "
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Osoba deklarująca"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
@@ -324,23 +325,23 @@ msgstr "Mechanizm deklarowania płatności CiviCRM"
 
 #: CRM/Pledge/Info.php
 msgid "access CiviPledge"
-msgstr ""
+msgstr "dostęp do CiviDeklaracje"
 
 #: CRM/Pledge/Info.php
 msgid "View pledges"
-msgstr ""
+msgstr "Pokaż deklaracje"
 
 #: CRM/Pledge/Info.php
 msgid "edit pledges"
-msgstr ""
+msgstr "edytuj deklarcje"
 
 #: CRM/Pledge/Info.php
 msgid "Create and update pledges"
-msgstr ""
+msgstr "Utwórz i zaktualizuj deklaracje"
 
 #: CRM/Pledge/Info.php
 msgid "delete in CiviPledge"
-msgstr ""
+msgstr "usuń w CiviDeklaracje"
 
 #: CRM/Pledge/Info.php
 msgid "Delete pledges"
@@ -665,7 +666,7 @@ msgstr "Nie dokonano jeszcze żadnych deklarowanych płatności przez tego użyt
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Contributions made in honor of %1"
-msgstr ""
+msgstr "Darowizna wykonana w imieniu %1"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -825,4 +826,4 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
-msgstr ""
+msgstr "Początkowa data"
