--- a/po/sk_SK/menu.po
+++ b/po/sk_SK/menu.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Jozef Gaal <preklady@mayday.sk>, 2012
+# Jozef Gaal <preklady@mayday.sk>, 2012,2016
 # Limexis <elfino@azet.sk>, 2013
 # Petra Ďurišová <durisova@zivica.sk>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-09 20:52+0000\n"
+"Last-Translator: Jozef Gaal <preklady@mayday.sk>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -251,7 +251,7 @@ msgstr "Finančné typy"
 
 msgctxt "menu"
 msgid "New Payment"
-msgstr ""
+msgstr "Nová platba"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -332,7 +332,7 @@ msgstr "Export úštovného spracovania"
 
 msgctxt "menu"
 msgid "View Payment"
-msgstr ""
+msgstr "Zobraziť platbu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -341,7 +341,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "PDF Invoice"
-msgstr ""
+msgstr "PDF Faktúra"
 
 msgctxt "menu"
 msgid "Email Invoice"
@@ -983,7 +983,7 @@ msgstr "Prezrieť natiahnuté súbory"
 
 msgctxt "menu"
 msgid "Delete File"
-msgstr ""
+msgstr "Vymazať súbor"
 
 msgctxt "menu"
 msgid "Log out"
@@ -1700,7 +1700,7 @@ msgstr "Všetky zostavy"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Podpora"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1725,7 +1725,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "O CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1740,7 +1740,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Developer"
-msgstr ""
+msgstr "Vývojár"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
