--- a/po/pl_PL/queue.po
+++ b/po/pl_PL/queue.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-09 23:40+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,4 +40,4 @@ msgstr "Egzekutor kolejki"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "Numer kolejki"
